@@ -1,3 +1,8 @@
+2009-05-25  John Dallaway  <john@dallaway.org.uk>
+
+	* include/var_io.h: Provide additional SPI status register defines as
+	reported by Peter Niebert. [ Bugzilla 1000781 ]
+
 2009-05-20  Vibi Sreenivasan <vibi_sreenivasan@cms.com>
 
 	* include/var_io.h (HAL_ARM_AT91_GPIO_MULTIDRAIN): Add a macro to
@@ -461,7 +466,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2009 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
